--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body, html {
 	flex-direction: column;
 	display: flex;
 	width: 90%;
-	margin-left: 2.5%;
+	margin-left: 5%;
 }
 
 section {
@@ -97,7 +97,7 @@ section {
 	margin-top: 20px;
 	display: flex;
 	padding: 10px;
-	width: 100%;
+	width: calc(100% - 20px);
 }
 
 header, footer {
@@ -107,8 +107,8 @@ header, footer {
 	text-align: center;
 	padding: 10px;
 	float: left;
-	width: 90%;
-	margin-left: 2.5%;
+	width: calc(90% - 20px);
+	margin-left: 5%;
 }
 
 footer {
