--- a/style.css
+++ b/style.css
@@ -111,6 +111,16 @@ header, footer {
 	margin-left: 5%;
 }
 
+header, footer {
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+	border-sizing: border-box;
+	background-color: #DADDB1;
+	text-align: center;
+	padding: 10px;
+	float: left;
+	width: calc(100% - 20px);
+}
+
 footer {
 	margin-top: 20px;
 }
